--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Бабуленькины котятки</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/reset.css">
   </head>
   <body>
     <header>
@@ -11,10 +15,10 @@
 
     <main>
       <nav>
-        <span>Абиссинская</span>
-        <span>Британская</span>
-        <span>Русская голубая</span>
-        <span>Сиамская</span>
+        <p>Абиссинская</p>
+        <p>Британская</p>
+        <p>Русская голубая</p>
+        <p>Сиамская</p>
       </nav>
 
       <section>
@@ -88,7 +92,7 @@
     </main>
 
     <footer>
-      <span>$copy; ООО Бабуленькины котятки, 2016</span>
+      <span>&copy; ООО Бабуленькины котятки, 2016</span>
       <span>Наш адрес: <address>улица Котовая, д. 5</address></span>
     </footer>
   </body>
